Replace Ktlint gradle plugin with Ktlint CLI