@@ -2,10 +2,12 @@ import io.gitlab.arturbosch.detekt.Detekt
 import io.gitlab.arturbosch.detekt.extensions.DetektExtension
 import org.gradle.api.Plugin
 import org.gradle.api.Project
+import org.gradle.api.attributes.Bundling
+import org.gradle.api.tasks.JavaExec
 import org.gradle.kotlin.dsl.configure
 import org.gradle.kotlin.dsl.dependencies
-import org.jlleitschuh.gradle.ktlint.KtlintExtension
-import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
+import org.gradle.kotlin.dsl.named
+import org.gradle.kotlin.dsl.register
 
 class QualityConventionPlugin : Plugin<Project> {
 
@@ -38,18 +40,43 @@ class QualityConventionPlugin : Plugin<Project> {
   }
 
   private fun Project.configureKtlint() {
-    pluginManager.apply(libs.plugins.ktlint)
+    val ktlintConfiguration = configurations.create("ktlint")
 
-    extensions.configure<KtlintExtension> {
-      debug.set(true)
-      version.set(libs.versions.ktlint)
-      reporters {
-        reporter(ReporterType.HTML)
-        reporter(ReporterType.PLAIN)
-      }
-      filter {
-        exclude { it.file.path.contains(layout.buildDirectory.dir("generated").get().toString()) }
-        include { it.file.path.contains(layout.buildDirectory.dir("kotlin").get().toString()) }
+    val inputFiles = fileTree("src") { include("src/**/*.kt") }
+    val outputDir = layout.buildDirectory.dir("reports")
+
+    tasks.register<JavaExec>("ktlintCheck") {
+        inputs.files(inputFiles)
+        outputs.dir(outputDir)
+
+        group = "Verification"
+        description = "Check Kotlin code style."
+        mainClass.set("com.pinterest.ktlint.Main")
+        classpath = ktlintConfiguration
+        args = listOf(
+            "src/**/*.kt",
+            "--reporter=plain",
+            "--reporter=html,output=${outputDir.get().asFile.absolutePath}/ktlint.html",
+        )
+    }
+
+    tasks.register<JavaExec>("ktlintFormat") {
+      inputs.files(inputFiles)
+      outputs.dir(outputDir)
+
+      group = "Formatting"
+      description = "Fix Kotlin code style deviations."
+      mainClass.set("com.pinterest.ktlint.Main")
+      classpath = ktlintConfiguration
+      jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
+      args = listOf("-F", "src/**/*.kt")
+    }
+
+    dependencies {
+      ktlintConfiguration(libs.ktlint.cli) {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
       }
     }
   }
